# toy-robot

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  command.cpp  command.h  command_controller.h  commander.cpp  commander.h  coordinates.cpp  coordinates.h  grid.cpp  grid.h  input_reader.cpp  input_reader.h  robot.cpp  robot.h
test/: .gitignore  CMakeLists.txt  integration_test.py  integration_test.robot  test_command.cpp  test_commander.cpp  test_grid.cpp  test_input_reader.cpp  test_robot.cpp
test/test_input/: blank_lines_file.txt  invalid_commands_file.txt  mixed_casing_file.txt  multiple_reports_file.txt  optimal_file.txt
